--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
     <header>
       <div class="container">
-        <ul>
-          <li><a href="#">Main</a></li>
+        <ul class="animationBlock">
+          <li class="active"><a href="index.html">Main</a></li>
           <li>
             <a href="#">Matches</a>
             <ul>
@@ -23,23 +23,31 @@
               <li><a href="#">Рейтинг</a></li>
             </ul>
           </li>
-          <li><a href="#">News</a></li>
+          <li><a href="news.html">News</a></li>
           <li><a href="#">Fans</a></li>
           <li><a href="#">Contacts</a></li>
           <li><a href="#">Admin</a></li>
         </ul>
-        <img
-          src="https://shakhtar.com/assets/images/global/logo.svg"
-          alt="logo"
-          class="logo"
-        />
+        <div class="logo-container">
+          <img
+            src="https://shakhtar.com/assets/images/global/logo.svg"
+            alt="logo"
+            class="logo"
+          />
+          <p class="animationBlock">
+            ФК «Шахтар» <br />
+            (Донецьк)
+          </p>
+        </div>
       </div>
     </header>
     <main>
-      <div class="banner"></div>
+      <div class="banner animationBlock"></div>
       <div class="section-padding">
         <div class="container">
-          <h1 style="text-align: center;">Історія команди</h1>
+          <p class="h1" style="text-align: center;">
+            Історія команди ФК Шахтар-Донецьк
+          </p>
           <div class="row">
             <div class="column40">
               <p class="h2">Кількість трофеїв:</p>
