--- a/index.html
+++ b/index.html
@@ -7,37 +7,90 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <title>Головна</title>
     <link href="main.css" rel="stylesheet" />
   </head>
+
   <body>
-    <header>
-      <div class="container">
-        <ul class="animationBlock">
-          <li class="active"><a href="index.html">Main</a></li>
-          <li>
-            <a href="#">Matches</a>
-            <ul>
-              <li><a href="#">Календар матчів</a></li>
-              <li><a href="#">Наступний матч</a></li>
-              <li><a href="#">Рейтинг</a></li>
-            </ul>
-          </li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="#">Fans</a></li>
-          <li><a href="#">Contacts</a></li>
-          <li><a href="#">Admin</a></li>
-        </ul>
-        <div class="logo-container">
-          <img
-            src="https://shakhtar.com/assets/images/global/logo.svg"
-            alt="logo"
-            class="logo"
-          />
-          <p class="animationBlock">
-            ФК «Шахтар» <br />
-            (Донецьк)
-          </p>
+    <header class="container-fluid">
+      <div class="row">
+        <div class="container">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Main</a>
+                </li>
+                <li class="nav-item dropdown showMobile">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Dropdown
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="nav-link" href="#">Календар матчів</a>
+                    <a class="nav-link" href="#">Наступний матч</a>
+                    <a class="nav-link" href="#">Рейтинг</a>
+                  </div>
+                </li>
+                <li class="nav-item showDesctop">
+                  <a class="nav-link" href="#">
+                    Matches
+                  </a>
+                  <ul>
+                    <li><a class="nav-link" href="#">Календар матчів</a></li>
+                    <li><a class="nav-link" href="#">Наступний матч</a></li>
+                    <li><a class="nav-link" href="#">Рейтинг</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="news.html">News</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="fans.html">Fans</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contacts.html">Contacts</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="admin.html">Admin</a>
+                </li>
+              </ul>
+            </div>
+            <div class="logo-container">
+              <img
+                src="https://shakhtar.com/assets/images/global/logo.svg"
+                alt="logo"
+                class="logo"
+              />
+              <p class="animationBlock">
+                ФК «Шахтар» <br />
+                (Донецьк)
+              </p>
+            </div>
+          </nav>
         </div>
       </div>
     </header>
@@ -49,11 +102,11 @@
             Історія команди ФК Шахтар-Донецьк
           </p>
           <div class="row">
-            <div class="column40">
+            <div class="col-lg-4 col-xs-12">
               <p class="h2">Кількість трофеїв:</p>
               <p class="h1" style="color: #000">39</p>
               <p class="h2">Досягнення:</p>
-              <ul class="mark">
+              <ul class="list">
                 <li>Кубок УЄФА (1)</li>
                 <li>Чемпіонат України (12)</li>
                 <li>Кубок України (13)</li>
@@ -62,7 +115,7 @@
                 <li>Суперкубок СРСР (1)</li>
               </ul>
             </div>
-            <div class="column60">
+            <div class="col-lg-8 col-xs-12">
               <p>
                 ФК «Шахтар» (Донецьк) - один з найтитулованіших клубів українського футболу, дванадцятикратний чемпіон України, трінадцатікратний володар Кубка України, восьмикратний володар Суперкубка України, володар Кубка УЄФА 2009 року, постійний учасник Ліги чемпіонів УЄФА.
               </p>
@@ -80,16 +133,16 @@
         <p class="h1" style="text-align: center;">«Донбас Арена»</p>
         <div class="container">
           <div class="row">
-            <div class="column50">
+            <div class="col-lg-6 col-xs-12">
               <img
                 src="https://shakhtar.com/ru-ru/club/infrastructure/donbass-arena/~/media/cfd6d2a9ff114fc19d3c91b787b19f35.ashx"
                 alt=""
               />
             </div>
-            <div class="column50">
-              <p class="h2">
+            <div class="col-lg-6 col-xs-12">
+              <blockquote class="blockquote">
                 «Донбас Арена» - футбольний стадіон категорії «Еліт», який відповідає всім стандартам УЄФА.
-              </p>
+              </blockquote>
               <p>
                 «Донбас Арена» - перший в Україні та Східній Європі стадіон категорії «Еліт», спроектований і побудований відповідно до стандартів УЄФА. Проектування арени почалося задовго до того, як «Шахтар» виграв Кубок УЄФА, а Україна отримала право прийматимуть Євро-2012.
               </p>
@@ -108,5 +161,20 @@
         </p>
       </div>
     </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
