--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <title>Головна</title>
     <link href="main.css" rel="stylesheet" />
+    <title>Головна</title>
   </head>
-
   <body>
     <header class="container-fluid">
       <div class="row">
@@ -50,7 +49,7 @@
                     Dropdown
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="nav-link" href="#">Календар матчів</a>
+                    <a class="nav-link" href="matches.html">Календар матчів</a>
                     <a class="nav-link" href="#">Наступний матч</a>
                     <a class="nav-link" href="#">Рейтинг</a>
                   </div>
@@ -60,7 +59,7 @@
                     Matches
                   </a>
                   <ul>
-                    <li><a class="nav-link" href="#">Календар матчів</a></li>
+                    <li><a class="nav-link" href="matches.html">Календар матчів</a></li>
                     <li><a class="nav-link" href="#">Наступний матч</a></li>
                     <li><a class="nav-link" href="#">Рейтинг</a></li>
                   </ul>
@@ -130,7 +129,7 @@
         </div>
       </div>
       <div class="section-padding-bottom">
-        <p class="h1" style="text-align: center;">«Донбас Арена»</p>
+        <p class="h1" style="text-align: center;">«Донбасс Арена»</p>
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-xs-12">
